# ammolite

./: .gitignore  .travis.yml  LICENSE  README.rst  environment.yml  issues.rst  pyproject.toml
.github/workflows/: deploy.yml  test.yml
doc/: apidoc.rst  conf.py  convert.rst  display.rst  index.rst  install.rst  introduction.py  issues.rst  logo.rst  model.rst  scraper.py  shapes.rst  startup.rst  usage.rst
doc/api/: model.rst  startup.rst
doc/demo/: demo.py  generate_demo.sh  makedemo.sh
doc/examples/: ampicillin.ipynb  assembly.ipynb  caffeine.ipynb  clathrin.ipynb  cytochrome.ipynb  flexibility.ipynb  hydrogen_bonds.ipynb  protein_and_ligand.ipynb  small_molecule.ipynb
doc/examples/scripts/: assembly.py  ball_and_stick.py  displacement.py  flexibility.py  heme_complex.py  hydrogen_bonds.py  nucleotide_contacts.py  small_molecule.py
src/ammolite/: __init__.py  cgo.py  convert.py  display.py  model.py  object.py  selection.py  shapes.py  startup.py
src/biotite2pymol/: __init__.py  display.py  model.py  selection.py  startup.py
src/bioview/: __init__.py  display.py  model.py  selection.py  startup.py
tests/: conftest.py  test_biotite2pymol.py  test_cgo.py  test_command.py  test_conversion.py  test_general.py  test_interactive.py  test_model.py  test_rendering.py  test_selection.py  test_shapes.py  test_startup.py  test_version.py  util.py
