[tool.poetry]
name = "ammolite"
version = "0.8.0"
description = "Visualize structure data from Biotite with PyMOL"
readme = "README.rst"
license = "BSD-3-Clause"
authors = ["Patrick Kunzmann <patrick.kunzm@gmail.com>"]
homepage = "https://ammolite.biotite-python.org"
repository = "https://github.com/biotite-dev/ammolite"
documentation = "https://ammolite.biotite-python.org"
keywords = [
    "Bioinformatics",
    "Computational biology",
    "Data visualization"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
packages = [
    { include = "ammolite", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
biotite = ">= 0.28"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sphinx = "^3.0"
sphinx-gallery = "0.9.0"
numpydoc = ">= 0.8"
matplotlib = ">=2.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
